--- a/main.css
+++ b/main.css
@@ -1,14 +1,55 @@
 .menu {
     width: 25%;
     float:left;
-    background-color: red;
 }
+
 .main {
     width: 75%;
     float:left;
-    background-color: blue;
+    background-color: #00509d;
 }
+
 .body {
     height: 100%;
-    background-color: pink;
+    background-color: #ffd500;
+}
+
+.dropbtn {
+    background-color: #00509d;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #00509d;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px #00509d;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color:#00509d}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #00509d;
 }
