--- a/main.css
+++ b/main.css
@@ -1,55 +1,53 @@
-.menu {
-    width: 25%;
-    float:left;
-}
-
-.main {
-    width: 75%;
-    float:left;
-    background-color: #00509d;
-}
-
-.body {
-    height: 100%;
-    background-color: #ffd500;
-}
-
-.dropbtn {
-    background-color: #00509d;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #003f88;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a, .dropbtn {
     display: inline-block;
-}
-
-.dropdown-content {
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: #00509d;
+  }
+  
+  li.dropdown {
+    display: inline-block;
+  }
+  
+  .dropdown-content {
     display: none;
     position: absolute;
     background-color: #00509d;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px #00509d;
     z-index: 1;
-}
-
-.dropdown-content a {
+  }
+  
+  .dropdown-content a {
     color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-}
-
-.dropdown-content a:hover {background-color:#00509d}
-
-.dropdown:hover .dropdown-content {
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {background-color: #00296b;}
+  
+  .dropdown:hover .dropdown-content {
     display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #00509d;
-}
+  }
+  .body {
+      background: #fdc500;
+  }
