--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: sans-serif;
-  background-image: url('../img/bg.jpg');
+  background-image: url('../../views/pages/bg.jpg');
   background-size: cover;
   background-position: top center;
 }
@@ -92,4 +92,10 @@ main {
   font-size: 24px;
   font-weight: 500;
   text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
+}
+
+
+#map 
+{ 
+  height: 180px; 
 }
