--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,26 +12,9 @@
   
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
+<%- include('../partials/layout'); %>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Météo-Surf</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/about">Maps</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/contact">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#"></a>
-      </li>
-    </ul>
-  </div>
-</nav>
   <div class="app">
     <header>
       <input type="text" autocomplete="off" class="search-box" placeholder="Recherche.." />
